--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,3 +12,14 @@ services:
         - POSTGRES_DB=waiter_lms
         - POSTGRES_USER=postgres
         - POSTGRES_PASSWORD=postgres
+
+  pgadmin:
+    container_name: pgdbadmin
+    image: dpage/pgadmin4
+    environment:
+      - PGADMIN_DEFAULT_EMAIL=admin@admin.com
+      - PGADMIN_DEFAULT_PASSWORD=admin
+    ports:
+      - 5050:80
+    depends_on:
+      - pgdb
