--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ importlib-metadata==4.11.4
 importlib-resources==5.7.1
 Mako==1.2.0
 MarkupSafe==2.1.1
+psycopg2==2.9.3
 pydantic==1.9.1
 sniffio==1.2.0
 SQLAlchemy==1.4.37
