--- a/requirements.txt
+++ b/requirements.txt
@@ -13,8 +13,10 @@ Mako==1.2.0
 MarkupSafe==2.1.1
 psycopg2==2.9.3
 pydantic==1.9.1
+six==1.16.0
 sniffio==1.2.0
 SQLAlchemy==1.4.37
+SQLAlchemy-Utils==0.38.2
 starlette==0.19.1
 typing_extensions==4.2.0
 uvicorn==0.17.6
