--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 alembic==1.8.0
 anyio==3.6.1
 asgiref==3.5.2
+black==22.3.0
 click==8.1.3
 colorama==0.4.4
 fastapi==0.78.0
@@ -11,6 +12,9 @@ importlib-metadata==4.11.4
 importlib-resources==5.7.1
 Mako==1.2.0
 MarkupSafe==2.1.1
+mypy-extensions==0.4.3
+pathspec==0.9.0
+platformdirs==2.5.2
 psycopg2==2.9.3
 pydantic==1.9.1
 six==1.16.0
@@ -18,6 +22,7 @@ sniffio==1.2.0
 SQLAlchemy==1.4.37
 SQLAlchemy-Utils==0.38.2
 starlette==0.19.1
+tomli==2.0.1
 typing_extensions==4.2.0
 uvicorn==0.17.6
 zipp==3.8.0
